# reifydb

./: .dockerignore  .gitignore  Cargo.toml  Makefile  caveats.md  cheat_sheet.md  clippy.toml  contributing.md  developer.md  identifier.md  license.md  operator.md  package.json  pnpm-lock.yaml  readme.md  release.md  release.toml  rustfmt.toml  test_logging.rs
crates/: Cargo.toml
crates/abi/: Cargo.toml
crates/abi/src/: constants.rs  lib.rs
crates/allocator/: Cargo.toml
crates/allocator-jemalloc/: Cargo.toml
crates/allocator-jemalloc/src/: lib.rs
crates/allocator/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: challenge.rs  crypto.rs  error.rs  github.rs  lib.rs  password.rs  registry.rs  session.rs  token.rs  token_store.rs
crates/base/: Cargo.toml
crates/base/src/: catalog.rs  expression.rs  key.rs  label.rs  lib.rs  row_meta.rs  value.rs
crates/builtin/: Cargo.toml
crates/builtin/src/: generator.rs  lib.rs  registry.rs  wasm.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: bootstrap.rs  catalog.rs  error.rs  interceptor.rs  lib.rs  row.rs
crates/catalog/tests/: change.rs  transactional.rs  vtable.rs
crates/cdc/: Cargo.toml
crates/cdc/src/: checkpoint.rs  consumer.rs  error.rs  lib.rs  poll.rs  testing.rs  watermark.rs
crates/cdc/tests/: cdc.rs  consumer.rs  memory.rs  postcard_wire_format.rs  snapshot_cdc.rs  snapshot_memory.rs  sqlite.rs  storage.rs  ttl.rs  watermark.rs
crates/codec/: Cargo.toml
crates/codec/src/: column_type.rs  constraint.rs  error.rs  lib.rs  reader.rs  tag.rs  typeinfo.rs
crates/codec/tests/: abi_conformance.rs  cross_codec.rs  golden.rs  json_roundtrip.rs  metadata.rs  multi_frame_roundtrip.rs  roundtrip_value.rs  utils.rs
crates/column/: Cargo.toml
crates/column/src/: bucket.rs  chunked.rs  column_block.rs  column_chunks.rs  compress.rs  compute.rs  encoding.rs  error.rs  lib.rs  mask.rs  nones.rs  persist.rs  predicate.rs  reader.rs  registry.rs  scan.rs  scan_source.rs  selection.rs  snapshot.rs  stats.rs
crates/compression/: Cargo.toml
crates/compression/src/: lib.rs  select.rs
crates/core/: Cargo.toml
crates/core/src/: bitvec.rs  clock.rs  common.rs  config.rs  delta.rs  diagnostic.rs  either.rs  error.rs  execution.rs  explain.rs  fingerprint.rs  key.rs  lib.rs  metric.rs  new_row.rs  order.rs  profile.rs  profiler.rs  retention.rs  retry.rs  row.rs  sort.rs  (+4 more)
crates/dataframe/: Cargo.toml
crates/derive/: Cargo.toml
crates/diagnostic/: Cargo.toml  readme.md
crates/encoding/: Cargo.toml
crates/engine/: Cargo.toml
crates/export/: Cargo.toml
crates/extension/: Cargo.toml
crates/flow/: Cargo.toml
crates/flow-operator-abi/: Cargo.toml
crates/flow-operator-sdk/: Cargo.toml
crates/frame/: Cargo.toml
crates/function/: Cargo.toml
crates/hash/: Cargo.toml  build.rs
crates/macro/: Cargo.toml
crates/macro-impl/: Cargo.toml  readme.md
crates/metric/: Cargo.toml
crates/metric-old/: Cargo.toml
crates/metrics/: Cargo.toml  build.rs
crates/network/: Cargo.toml  build.rs
crates/operator-abi/: Cargo.toml
crates/operator-api/: Cargo.toml
crates/operator-sdk/: Cargo.toml
crates/persistence/: Cargo.toml
crates/policy/: Cargo.toml  build.rs
crates/profiler/: Cargo.toml
crates/raft/: Cargo.toml
crates/reifydb-auth/: Cargo.toml
crates/reifydb-catalog/: Cargo.toml
crates/reifydb-cdc/: Cargo.toml
crates/reifydb-core/: Cargo.toml
crates/reifydb-engine/: Cargo.toml
crates/reifydb-flow/: Cargo.toml
crates/reifydb-hash/: Cargo.toml  build.rs
crates/reifydb-network/: Cargo.toml  build.rs
crates/reifydb-rql/: Cargo.toml  build.rs
crates/reifydb-storage/: Cargo.toml  build.rs
crates/reifydb-sub-admin/: build.rs
crates/reifydb-sub-flow/: Cargo.toml  build.rs
crates/reifydb-sub-grpc/: Cargo.toml
crates/reifydb-sub-log/: Cargo.toml
crates/reifydb-sub-logging/: Cargo.toml
crates/reifydb-sub-server/: Cargo.toml
crates/reifydb-sub-workerpool/: Cargo.toml
crates/reifydb-sub-ws/: Cargo.toml
crates/reifydb-system/: Cargo.toml
crates/reifydb-testing/: Cargo.toml  build.rs
crates/reifydb-transaction/: .gitignore  Cargo.toml  build.rs
crates/reifydb-type/: Cargo.toml
crates/remote-proxy/: Cargo.toml
crates/routine/: Cargo.toml
crates/rql/: Cargo.toml
crates/rql-graphql/: Cargo.toml
crates/rqlv2/: Cargo.toml
crates/runtime/: Cargo.toml  build.rs
crates/sdk/: Cargo.toml
crates/sql/: Cargo.toml
crates/sqlite/: Cargo.toml
crates/storage/: Cargo.toml
crates/store/: Cargo.toml
crates/store-column/: Cargo.toml
crates/store-multi/: Cargo.toml  build.rs
crates/store-row/: Cargo.toml
crates/store-single/: Cargo.toml
crates/store-transaction/: Cargo.toml  cheat_sheet_sqlite.md
crates/sub-admin/: Cargo.toml  build.rs
crates/sub-api/: Cargo.toml
crates/sub-column/: Cargo.toml
crates/sub-flow/: Cargo.toml
crates/sub-logging/: Cargo.toml
crates/sub-metric/: Cargo.toml
crates/sub-metrics/: Cargo.toml
crates/sub-profiler/: Cargo.toml
crates/sub-raft/: Cargo.toml
crates/sub-replication/: Cargo.toml  build.rs
crates/sub-runtime/: Cargo.toml
crates/sub-server/: Cargo.toml
crates/sub-server-admin/: Cargo.toml  build.rs  readme.md
crates/sub-server-grpc/: Cargo.toml
crates/sub-server-http/: Cargo.toml
crates/sub-server-otel/: Cargo.toml
crates/sub-server-ws/: Cargo.toml  build.rs
crates/sub-store/: Cargo.toml  build.rs
crates/sub-subscription/: Cargo.toml
crates/sub-task/: Cargo.toml  build.rs
crates/sub-tracing/: Cargo.toml
crates/sub-worker/: Cargo.toml
crates/subscription/: Cargo.toml
crates/test-harness/: Cargo.toml
crates/testing/: Cargo.toml
crates/testing-macro/: Cargo.toml
crates/transaction/: Cargo.toml
crates/type/: Cargo.toml
crates/value/: Cargo.toml
crates/vm/: Cargo.toml
crates/wasm/: Cargo.toml  build.rs
crates/wire-format/: Cargo.toml  build.rs
fuzz/: Cargo.toml  readme.md
fuzz/fuzz_targets/: abi_buffer.rs  abi_layout.rs  keycode_deserialize.rs  keycode_roundtrip.rs  rql_gen.rs  rql_parse.rs  rql_tokenize.rs  sql_tokenize.rs  sql_transpile.rs
(+11507 files in other folders)
