[workspace]
resolver = "2"

members = [
    # Core crates
    "crates/auth",
    "crates/catalog",
    "crates/cdc",
    "crates/compression",
    "crates/core",
    "crates/engine",
    "crates/hash",
    "crates/macro",
    "crates/macro-impl",
    "crates/network",
    "crates/flow-operator/abi",
    "crates/flow-operator/sdk",
    "crates/rql",
    "crates/store-column",
    "crates/store-transaction",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-admin",
    "crates/sub-flow",
    "crates/sub-logging",
    "crates/sub-server",
    "crates/sub-worker",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/reifydb-derive",
    "pkg/rust/reifydb-client-derive",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
]

default-members = [
    # Core crates
    "crates/auth",
    "crates/catalog",
    "crates/cdc",
    "crates/compression",
    "crates/core",
    "crates/engine",
    "crates/hash",
    "crates/macro",
    "crates/macro-impl",
    "crates/network",
    "crates/flow-operator/abi",
    "crates/flow-operator/sdk",
    "crates/rql",
    "crates/store-column",
    "crates/store-transaction",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-admin",
    "crates/sub-flow",
    "crates/sub-logging",
    "crates/sub-server",
    "crates/sub-worker",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
]

[workspace.package]
authors = ["Dominique Chuo <dominique@reifydb.com>"]
homepage = "https://reifydb.com"
repository = "https://github.com/reifydb/reifydb"
readme = "readme.md"
license = "AGPL-3.0-or-later"

version = "0.1.4"
rust-version = "1.85.1"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
lto = false
codegen-units = 256
panic = "unwind"

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 256
incremental = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
reifydb = { version = "0.1.4", path = "pkg/rust/reifydb" }
reifydb-derive = { version = "0.1.4", path = "pkg/rust/reifydb-derive" }

reifydb-client = { version = "0.1.4", path = "pkg/rust/reifydb-client" }
reifydb-client-derive = { version = "0.1.4", path = "pkg/rust/reifydb-client-derive" }

# Internal crates
reifydb-auth = { version = "0.1.4", path = "crates/auth" }
reifydb-catalog = { version = "0.1.4", path = "crates/catalog" }
reifydb-cdc = { version = "0.1.4", path = "crates/cdc" }
reifydb-compression = { version = "0.1.4", path = "crates/compression" }
reifydb-core = { version = "0.1.4", path = "crates/core" }
reifydb-engine = { version = "0.1.4", path = "crates/engine" }
reifydb-hash = { version = "0.1.4", path = "crates/hash" }
reifydb-network = { version = "0.1.4", path = "crates/network" }
reifydb-flow-operator-abi = { version = "0.1.4", path = "crates/flow-operator/abi" }
reifydb-flow-operator-sdk = { version = "0.1.4", path = "crates/flow-operator/sdk" }
reifydb-rql = { version = "0.1.4", path = "crates/rql" }
reifydb-store-column = { version = "0.1.4", path = "crates/store-column" }
reifydb-store-transaction = { version = "0.1.4", path = "crates/store-transaction" }
reifydb-testing = { version = "0.1.4", path = "crates/testing" }
reifydb-transaction = { version = "0.1.4", path = "crates/transaction" }
reifydb-type = { version = "0.1.4", path = "crates/type" }
reifydb-macro = { version = "0.1.4", path = "crates/macro" }
reifydb-macro-impl = { version = "0.1.4", path = "crates/macro-impl" }

# Subsystems
reifydb-sub-api = { version = "0.1.4", path = "crates/sub-api" }
reifydb-sub-admin = { version = "0.1.4", path = "crates/sub-admin" }
reifydb-sub-flow = { version = "0.1.4", path = "crates/sub-flow" }
reifydb-sub-logging = { version = "0.1.4", path = "crates/sub-logging" }
reifydb-sub-worker = { version = "0.1.4", path = "crates/sub-worker" }
reifydb-sub-server = { version = "0.1.4", path = "crates/sub-server" }

# External dependencies

libc = { version = "0.2.175" }
libloading = { version = "0.8" }

once_cell = { version = "1.21.3" }
uuid = { version = "1.18.1", default-features = false, features = ["v4", "v7", "serde", "std"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
num-traits = { version = "0.2.19" }
rand = { version = "0.9.2" }

crossbeam-skiplist = { version = "0.1.3" }
crossbeam-channel = { version = "0.5.15" }
indexmap = { version = "2.11", features = ["serde"] }
parking_lot = { version = "0.12.4" }
rayon = { version = "1.11.0" }
self_cell = { version = "1.1.0" }


# Network and server
mio = { version = "1.0.4", features = ["net", "os-poll"] }
slab = { version = "0.4.11" }
socket2 = { version = "0.6.0", features = ["all"] }
num_cpus = { version = "1.17.0" }
core_affinity = { version = "0.8.3" }
httparse = { version = "1.10.1" }
urlencoding = { version = "2.1.3" }

# sqlite
rusqlite = { version = "0.37.0", features = ["bundled"] }

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = { version = "0.11.17" }
serde_json = { version = "1.0.143" }
bincode = { version = "2.0.1", features = ["serde"] }

# testing
test_each_file = { version = "0.3.5" }

# proc-macro
proc-macro2 = { version = "1.0" }