[workspace]
resolver = "2"

members = [
    # Core crates
    "crates/auth",
    "crates/function",
    "crates/catalog",
    "crates/cdc",
    "crates/compression",
    "crates/core",
    "crates/engine",
    "crates/hash",
    "crates/metric",
    "crates/macro",
    "crates/macro-impl",
    "crates/abi",
    "crates/sdk",
    "crates/rql",
    "crates/rqlv2",
    "crates/store-column",
    "crates/store-multi",
    "crates/store-single",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    "crates/vm",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-server-admin",
    "crates/sub-flow",
    "crates/sub-task",
    "crates/sub-tracing",
    "crates/sub-server",
    "crates/sub-server-http",
    "crates/sub-server-otel",
    "crates/sub-server-ws",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    "bin/load-test",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/reifydb-derive",
    "pkg/rust/reifydb-client-derive",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
]

default-members = [
    # Core crates
    "crates/auth",
    "crates/function",
    "crates/catalog",
    "crates/cdc",
    "crates/compression",
    "crates/core",
    "crates/engine",
    "crates/hash",
    "crates/metric",
    "crates/macro",
    "crates/macro-impl",
    "crates/abi",
    "crates/sdk",
    "crates/rql",
    "crates/rqlv2",
    "crates/store-column",
    "crates/store-multi",
    "crates/store-single",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    "crates/vm",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-server-admin",
    "crates/sub-flow",
    "crates/sub-task",
    "crates/sub-tracing",
    "crates/sub-server",
    "crates/sub-server-http",
    "crates/sub-server-otel",
    "crates/sub-server-ws",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    "bin/load-test",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
]

[workspace.package]
authors = ["Dominique Chuo <dominique@reifydb.com>"]
homepage = "https://reifydb.com"
repository = "https://github.com/reifydb/reifydb"
readme = "readme.md"
license = "AGPL-3.0-or-later"

version = "0.2.0"
rust-version = "1.92.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
lto = false
codegen-units = 256
panic = "unwind"

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 256
incremental = true
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
reifydb = { version = "0.2.0", path = "pkg/rust/reifydb" }
reifydb-derive = { version = "0.2.0", path = "pkg/rust/reifydb-derive" }

reifydb-client = { version = "0.2.0", path = "pkg/rust/reifydb-client" }
reifydb-client-derive = { version = "0.2.0", path = "pkg/rust/reifydb-client-derive" }

# Internal crates
reifydb-auth = { version = "0.2.0", path = "crates/auth" }
reifydb-function = { version = "0.2.0", path = "crates/function" }
reifydb-catalog = { version = "0.2.0", path = "crates/catalog" }
reifydb-cdc = { version = "0.2.0", path = "crates/cdc", default-features = false }
reifydb-compression = { version = "0.2.0", path = "crates/compression" }
reifydb-core = { version = "0.2.0", path = "crates/core" }
reifydb-engine = { version = "0.2.0", path = "crates/engine" }
reifydb-hash = { version = "0.2.0", path = "crates/hash" }
reifydb-metric = { version = "0.2.0", path = "crates/metric" }
reifydb-abi = { version = "0.2.0", path = "crates/abi" }
reifydb-sdk = { version = "0.2.0", path = "crates/sdk" }
reifydb-rql = { version = "0.2.0", path = "crates/rql" }
reifydb-rqlv2 = { version = "0.2.0", path = "crates/rqlv2" }
reifydb-store-column = { version = "0.2.0", path = "crates/store-column" }
reifydb-store-multi = { version = "0.2.0", path = "crates/store-multi" }
reifydb-store-single = { version = "0.2.0", path = "crates/store-single" }
reifydb-testing = { version = "0.2.0", path = "crates/testing" }
reifydb-transaction = { version = "0.2.0", path = "crates/transaction" }
reifydb-type = { version = "0.2.0", path = "crates/type" }
reifydb-vm = { version = "0.2.0", path = "crates/vm" }
reifydb-macro = { version = "0.2.0", path = "crates/macro" }
reifydb-macro-impl = { version = "0.2.0", path = "crates/macro-impl" }

# Subsystems
reifydb-sub-api = { version = "0.2.0", path = "crates/sub-api" }
reifydb-sub-server-admin = { version = "0.2.0", path = "crates/sub-server-admin" }
reifydb-sub-flow = { version = "0.2.0", path = "crates/sub-flow" }
reifydb-sub-task = { version = "0.2.0", path = "crates/sub-task" }
reifydb-sub-tracing = { version = "0.2.0", path = "crates/sub-tracing" }
reifydb-sub-server = { version = "0.2.0", path = "crates/sub-server" }
reifydb-sub-server-http = { version = "0.2.0", path = "crates/sub-server-http" }
reifydb-sub-server-otel = { version = "0.2.0", path = "crates/sub-server-otel" }
reifydb-sub-server-ws = { version = "0.2.0", path = "crates/sub-server-ws" }

# External dependencies

# Tracing and logging
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt"] }

# OpenTelemetry - compatible versions
opentelemetry = { version = "0.31", features = ["tracing"] }
opentelemetry_sdk = { version = "0.31",features = ["tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tracing", "tokio"] }
tracing-opentelemetry = { version = "0.32" , features = ["default"]}

libc = { version = "0.2.175" }
libloading = { version = "0.9" }

once_cell = { version = "1.21.3" }
uuid = { version = "1.19", default-features = false, features = ["v4", "v7", "serde", "std"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
num-traits = { version = "0.2.19" }
rand = { version = "0.9.2" }

crossbeam-skiplist = { version = "0.1.3" }
imbl = { version = "3" }
dashmap = { version = "7.0.0-rc2" }
indexmap = { version = "2.11", features = ["serde"] }
rayon = { version = "1.11.0" }
bumpalo = { version = "3.19.0", features = ["collections"] }
parking_lot = {version = "0.12.5"}
crossbeam-channel = { version = "0.5.13" }

# Network and server
num_cpus = { version = "1.17.0" }
httparse = { version = "1.10.1" }

# Async runtime and networking (tokio stack)
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "macros", "time", "tracing"] }
tokio-tungstenite = { version = "0.28.0" }

axum = { version = "0.8.7" }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
futures-util = { version = "0.3.31", features = ["sink"] }

# sqlite
rusqlite = { version = "0.37.0", features = ["bundled"] }

# serde
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_bytes = { version = "0.11.17" }
serde_json = { version = "1.0.143" }
postcard = { version = "1.1", features = ["use-std"] }

# testing
test_each_file = { version = "0.3.5" }

# proc-macro
proc-macro2 = { version = "1.0" }

# load-testing
hdrhistogram = { version = "7.5" }