[workspace]
resolver = "2"
exclude = ["fuzz"]

members = [
    # Core crates
    "crates/auth",
    "crates/build",
    "crates/routine",
    "crates/catalog",
    "crates/cdc",
    "crates/core",
    "crates/engine",
    "crates/extension",
    "crates/metric",
    "crates/metric-old",
    "crates/policy",
    "crates/macro",
    "crates/macro-impl",
    "crates/abi",
    "crates/runtime",
    "crates/sdk",
    "crates/rql",
    "crates/sql",
    "crates/store-multi",
    "crates/store-single",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    "crates/wasm",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-server-admin",
    "crates/sub-flow",
    "crates/sub-task",
    "crates/sub-tracing",
    "crates/sub-server",
    "crates/sub-server-grpc",
    "crates/sub-server-http",
    "crates/sub-server-otel",
    "crates/sub-server-ws",
    "crates/sub-replication",
    "crates/sub-subscription",
    "crates/subscription",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    "bin/load-test",
    "bin/forge",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/reifydb-derive",
    "pkg/rust/reifydb-client-derive",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
    "pkg/rust/tests/integration",
    # WebAssembly
    "pkg/webassembly",
    "pkg/wasi",
]

default-members = [
    # Core crates
    "crates/auth",
    "crates/routine",
    "crates/catalog",
    "crates/cdc",
    "crates/core",
    "crates/engine",
    "crates/extension",
    "crates/metric",
    "crates/metric-old",
    "crates/policy",
    "crates/macro",
    "crates/macro-impl",
    "crates/abi",
    "crates/runtime",
    "crates/sdk",
    "crates/rql",
    "crates/sql",
    "crates/store-multi",
    "crates/store-single",
    "crates/testing",
    "crates/transaction",
    "crates/type",
    "crates/wasm",
    # Subsystem crates
    "crates/sub-api",
    "crates/sub-server-admin",
    "crates/sub-flow",
    "crates/sub-task",
    "crates/sub-tracing",
    "crates/sub-server",
    "crates/sub-server-grpc",
    "crates/sub-server-http",
    "crates/sub-server-otel",
    "crates/sub-server-ws",
    "crates/sub-replication",
    "crates/sub-subscription",
    "crates/subscription",
    # Binary projects
    "bin/cli",
    "bin/server",
    "bin/playground",
    "bin/testcontainer",
    "bin/load-test",
    "bin/forge",
    # Package/library projects
    "pkg/rust/reifydb",
    "pkg/rust/reifydb-client",
    "pkg/rust/examples",
    "pkg/rust/tests/limit",
    "pkg/rust/tests/regression",
    "pkg/rust/tests/integration",
]

[workspace.package]
authors = ["Dominique Chuo <dominique@reifydb.com>"]
homepage = "https://reifydb.com"
repository = "https://github.com/reifydb/reifydb"
readme = "readme.md"
license = "Apache-2.0"

version = "0.4.9"
rust-version = "1.92.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
lto = false
codegen-units = 256
panic = "unwind"

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 256
incremental = true
debug-assertions = true
overflow-checks = true

[profile.release]
codegen-units = 256
strip = true

[workspace.dependencies]
reifydb = { version = "0.4.9", path = "pkg/rust/reifydb", features = [
    "sub_flow", "sub_tracing", "sub_server", "sub_server_admin",
    "sub_server_grpc", "sub_server_http", "sub_server_ws",
    "sub_server_otel", "sub_replication",
] }
reifydb-derive = { version = "0.4.9", path = "pkg/rust/reifydb-derive" }
reifydb-build = { version = "0.4.9", path = "crates/build" }

reifydb-client = { version = "0.4.9", path = "pkg/rust/reifydb-client" }
reifydb-client-derive = { version = "0.4.9", path = "pkg/rust/reifydb-client-derive" }

# Internal crates
reifydb-auth = { version = "0.4.9", path = "crates/auth" }
reifydb-routine = { version = "0.4.9", path = "crates/routine" }
reifydb-catalog = { version = "0.4.9", path = "crates/catalog" }
reifydb-cdc = { version = "0.4.9", path = "crates/cdc" }
reifydb-core = { version = "0.4.9", path = "crates/core" }
reifydb-engine = { version = "0.4.9", path = "crates/engine" }
reifydb-extension = { version = "0.4.9", path = "crates/extension" }
reifydb-metric = { version = "0.4.9", path = "crates/metric" }
reifydb-metric-old = { version = "0.4.9", path = "crates/metric-old" }
reifydb-policy = { version = "0.4.9", path = "crates/policy" }
reifydb-abi = { version = "0.4.9", path = "crates/abi" }
reifydb-runtime = { version = "0.4.9", path = "crates/runtime" }
reifydb-sdk = { version = "0.4.9", path = "crates/sdk" }
reifydb-rql = { version = "0.4.9", path = "crates/rql" }
reifydb-sql = { version = "0.4.9", path = "crates/sql" }
reifydb-store-multi = { version = "0.4.9", path = "crates/store-multi" }
reifydb-store-single = { version = "0.4.9", path = "crates/store-single" }
reifydb-testing = { version = "0.4.9", path = "crates/testing" }
reifydb-transaction = { version = "0.4.9", path = "crates/transaction" }
reifydb-type = { version = "0.4.9", path = "crates/type" }
reifydb-wasm = { version = "0.4.9", path = "crates/wasm" }
reifydb-macro = { version = "0.4.9", path = "crates/macro" }
reifydb-macro-impl = { version = "0.4.9", path = "crates/macro-impl" }

# Subsystems
reifydb-sub-api = { version = "0.4.9", path = "crates/sub-api" }
reifydb-sub-server-admin = { version = "0.4.9", path = "crates/sub-server-admin" }
reifydb-sub-flow = { version = "0.4.9", path = "crates/sub-flow" }
reifydb-sub-task = { version = "0.4.9", path = "crates/sub-task" }
reifydb-sub-tracing = { version = "0.4.9", path = "crates/sub-tracing" }
reifydb-sub-server = { version = "0.4.9", path = "crates/sub-server" }
reifydb-sub-server-grpc = { version = "0.4.9", path = "crates/sub-server-grpc" }
reifydb-sub-server-http = { version = "0.4.9", path = "crates/sub-server-http" }
reifydb-sub-server-otel = { version = "0.4.9", path = "crates/sub-server-otel" }
reifydb-sub-server-ws = { version = "0.4.9", path = "crates/sub-server-ws" }
reifydb-sub-replication = { version = "0.4.9", path = "crates/sub-replication" }
reifydb-sub-subscription = { version = "0.4.9", path = "crates/sub-subscription" }
reifydb-subscription = { version = "0.4.9", path = "crates/subscription" }

# External dependencies

# Tracing and logging
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt"] }

# OpenTelemetry - compatible versions
opentelemetry = { version = "0.31", features = ["tracing"] }
opentelemetry_sdk = { version = "0.31",features = ["tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tracing", "tokio"] }
tracing-opentelemetry = { version = "0.32" , features = ["default"]}

libc = { version = "0.2.175" }
libloading = { version = "0.9" }
libm = { version = "0.2.8" }

once_cell = { version = "1.21.3" }
uuid = { version = "1.19", default-features = false, features = ["v4", "v7", "serde", "std", "js"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
num-traits = { version = "0.2.19" }
rand = { version = "0.10" }
argon2 = { version = "0.6.0-rc" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = { version = "0.5" }
subtle = { version = "2" }

crossbeam-skiplist = { version = "0.1.3" }
dashmap = { version = "7.0.0-rc2", features = ["raw-api"] }
indexmap = { version = "2.11", features = ["serde"] }
rayon = { version = "1.11.0" }
bumpalo = { version = "3.19.0", features = ["collections", "boxed"] }
parking_lot = {version = "0.12.5"}
crossbeam-channel = { version = "0.5.13" }

# Network and server
num_cpus = { version = "1.17.0" }
httparse = { version = "1.10.1" }

# Async runtime and networking (tokio stack)
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "sync", "macros", "time", "tracing"] }
tokio-stream = { version = "0.1.18" }
tokio-tungstenite = { version = "0.29.0" }
tonic = { version = "0.14.5", default-features = false, features = ["default"] }
tonic-prost = { version = "0.14.5" }
prost = { version = "0.14.3" }

axum = { version = "0.8.8" }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
tower = { version = "0.5.3", features = ["limit", "timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "timeout"] }
futures-util = { version = "0.3.32", features = ["sink"] }

# sqlite
rusqlite = { version = "0.39.0", features = ["bundled"] }

# hashing
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# serde
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_bytes = { version = "0.11.19" }
serde_json = { version = "1.0.149" }
postcard = { version = "1.1.3", features = ["use-std"] }
thiserror = { version = "2.0.18" }

# testing
test_each_file = { version = "0.3.7" }

# proc-macro
proc-macro2 = { version = "1.0.106" }
paste = { version = "1.0.15" }

# load-testing
hdrhistogram = { version = "7.5.4" }

# WASM runtime
wasmtime = "43.0.0"
wasmtime-wasi = "43.0.0"

# WASM test dependencies
wast = "245.0.1"
wat = "1.245.1"

# WASM dependencies
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
web-sys = "0.3.91"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen-test = "0.3.64"
cfg-if = "1.0.4"