[package]
name = "reifydb-auth"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization module for ReifyDB"

[features]
default = ["native"]
native = ["reifydb-core/native", "reifydb-type/native"]
wasm = ["reifydb-core/wasm", "reifydb-type/wasm"]

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }

[dev-dependencies]