[package]
name = "reifydb-auth"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization module for ReifyDB"

[features]
default = []

[dependencies]
reifydb-core = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-type = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
