[package]
name = "reifydb-auth"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization module for ReifyDB"

[features]
default = []

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-value = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-no-provider"] }
serde_json = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
