[package]
name = "reifydb-builtin"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in functions for ReifyDB"

[dependencies]
reifydb-core = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-type = { workspace = true }

indexmap = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
