[package]
name = "reifydb-catalog"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database catalog and metadata management for ReifyDB"

[dependencies]
reifydb-abi = { workspace = true }
reifydb-core = { workspace = true }
reifydb-store-transaction = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }

async-trait = { workspace = true }
crossbeam-skiplist = {workspace = true}
once_cell = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reifydb-engine = { workspace = true}
tokio = {workspace = true}