[package]
name = "reifydb-catalog"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database catalog and metadata management for ReifyDB"

[features]
default = ["native"]
native = [
    "reifydb-core/native",
    "reifydb-hash/native",
    "reifydb-metric/native",
    "reifydb-store-multi/native",
    "reifydb-store-single/native",
    "reifydb-transaction/native",
    "reifydb-type/native",
]
wasm = [
    "reifydb-core/wasm",
    "reifydb-hash/wasm",
    "reifydb-metric/wasm",
    "reifydb-store-multi/wasm",
    "reifydb-store-single/wasm",
    "reifydb-transaction/wasm",
    "reifydb-type/wasm",
]

[dependencies]
reifydb-abi = { workspace = true }
reifydb-core = { workspace = true }
reifydb-hash = { workspace = true }
reifydb-metric = { workspace = true }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }

futures-util = { workspace = true }
crossbeam-skiplist = {workspace = true}
once_cell = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reifydb-engine = { workspace = true}