[package]
name = "reifydb-catalog"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database catalog and metadata management for ReifyDB"

[features]
default = []

[dependencies]
reifydb-abi = { workspace = true }
reifydb-core = { workspace = true }
reifydb-metric = { workspace = true }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }

futures-util = { workspace = true }
crossbeam-skiplist = {workspace = true}
once_cell = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
reifydb-engine = { workspace = true, features = ["tokio"] }
