[package]
name = "reifydb-cdc"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Change Data Capture module for ReifyDB"

[features]
default = []

[dependencies]
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
reifydb-core = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reifydb-catalog = { workspace = true }
reifydb-engine = { workspace = true, features = ["tokio"] }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-testing = { workspace = true }
test_each_file = { workspace = true }
