[package]
name = "reifydb-column"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Columnar storage engine for ReifyDB."

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-core = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-type = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
