[package]
name = "reifydb-compression"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reifydb-core = { path = "../core" }
reifydb-type = { path = "../type" }
bincode = { workspace = true, features = ["serde"] }
