[package]
name = "reifydb-compression"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Column compression for storage and network in ReifyDB"

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
