[package]
name = "reifydb-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core database interfaces and data structures for ReifyDB"

[features]
default = ["native"]
native = ["reifydb-runtime/native", "reifydb-hash/native", "futures-util"]
wasm = ["reifydb-runtime/wasm", "reifydb-hash/wasm"]

[dependencies]
dashmap = { workspace = true }
reifydb-hash = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-type = { workspace = true }
tracing = { workspace = true }
crossbeam-skiplist = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
futures-util = { workspace = true, optional = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
reifydb-catalog = {workspace = true}
reifydb-engine = {workspace = true}
reifydb-transaction = {workspace = true}


